контроллеры переведены с FBV на CBV

--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -16,9 +16,9 @@
                     <img src="{{ product.image | media_filter}}">
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">{{ product.name }}</h1>
+                    <h1 class="card-title pricing-card-title">{{ object.name }}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>{{ product.description }}</li>
+                        <li>{{ object.description }}</li>
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                     <a class="btn btn-primary" href="{% url 'catalog:products_list' %}" role="button">Назад</a>
