--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -1,6 +1,7 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+<div class="container">
     <div class="row">
         <div class="col-6">
             <div class="card">
@@ -14,4 +15,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
