--- a/blog/templates/blog/blog_confirm_delete.html
+++ b/blog/templates/blog/blog_confirm_delete.html
@@ -8,14 +8,10 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-success">
-                            {% if object %}
-                                Сохранить
-                            {% else %}
-                                Создать
-                            {% endif %}
-                        </button>
+                        <p>Удалить материал "{{ object|title }}"</p>
+
+                        <button type="submit" class="btn btn-danger">Да, удалить</button>
+                        <a href="{% url 'blog:list' %}" class="btn btn-warning">Отмена</a>
                     </form>
                 </div>
             </div>
