--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -16,6 +16,8 @@
                 </div>
                 <div class="card-body">
                     <a class="btn btn-primary" href="{% url 'blog:view' object.pk %}" role="button">Посмотреть</a>
+                    <a class="btn btn-warning" href="{% url 'blog:edit' object.pk %}" role="button">Изменить</a>
+                    <a class="btn btn-danger" href="{% url 'blog:delete' object.pk %}" role="button">Удалить</a>
                 </div>
             </div>
         </div>
