add slug для заголовка

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,7 +3,7 @@
 {% load my_tags %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Материал "{{ object|title }}"</h1>
+    <h1 class="display-4">Материал "{{ object|title }}" ({{ object.slug }})</h1>
 </div>
 
 <div class="container">
@@ -16,7 +16,8 @@
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li>{{ object.body }}</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                    <a class="btn btn-warning" href="{% url 'blog:edit' object.pk %}" role="button">Изменить</a>
+                    <a class="btn btn-danger" href="{% url 'blog:delete' object.pk %}" role="button">Удалить</a>
                     <a class="btn btn-primary" href="{% url 'blog:list' %}" role="button">Назад</a>
                 </div>
             </div>
@@ -24,5 +25,8 @@
 
     </div>
 </div>
-
+<div class="container">
+    <br>
+    <p>Просмотры {{ object.views_count }}</p>
+</div>
 {% endblock %}
