--- a/blog/templates/blog/blog_confirm_delete.html
+++ b/blog/templates/blog/blog_confirm_delete.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        <p>Удалить материал "{{ object|title }}"</p>
+                        <p>Удалить материал "{{ object|title }}"?</p>
 
                         <button type="submit" class="btn btn-danger">Да, удалить</button>
                         <a href="{% url 'blog:list' %}" class="btn btn-warning">Отмена</a>
