--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -21,6 +21,6 @@
             </div>
         </div>
     </div>
-    <a class="btn btn-primary" href="{% url 'blog:list' %}" role="button">Назад</a>
+    <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
 </div>
 {% endblock %}
