--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -12,7 +12,7 @@
         <div class="col-3">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
-                    {{ object|title }}
+                    {{ object.title }}
                 </div>
                 <div class="card-body">
                     <a class="btn btn-primary" href="{% url 'blog:view' object.pk %}" role="button">Посмотреть</a>
