--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -8,10 +8,10 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        <p>Удалить материал "{{ object.title }}"?</p>
+                        <p>Удалить материал "{{ object.name }}"?</p>
 
                         <button type="submit" class="btn btn-danger">Да, удалить</button>
-                        <a href="{% url 'catalog:product_list' %}" class="btn btn-warning">Отмена</a>
+                        <a href="{% url 'blog:list' %}" class="btn btn-warning">Отмена</a>
                     </form>
                 </div>
             </div>
