--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -21,7 +21,7 @@
                         <li>{{ object.description }}</li>
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
-                    <a class="btn btn-primary" href="{% url 'catalog:products_list' %}" role="button">Назад</a>
+                    <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
                 </div>
             </div>
         </div>
