--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -20,7 +20,18 @@
                 </div>
             </div>
         </div>
+        <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                {{formset.management_form }}
+                {% for form in formset.forms%}
+                {{form.as_p}}
+                {% endfor %}
+            </div>
+        </div>
     </div>
+    </div>
+
     <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
 </div>
 {% endblock %}
