--- a/users/templates/users/password-reset.html
+++ b/users/templates/users/password-reset.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="container">
+    Введите адрес электронной почты на которую будет отправлен новый пароль
         <div class="col-6">
             <div class="card">
                 <div class="card-body">
@@ -9,9 +10,8 @@
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-success">
-                        Войти
+                        Сбросить пароль
                         </button>
-                        <a href="{% url 'users:password-reset' %}" class="btn btn-secondary"> Восcтановить пароль </a>
                     </form>
                 </div>
             </div>
