--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -24,9 +24,13 @@
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li>{{ object.description|slice:":100" }}</li>
                     </ul>
-                    <a class="btn btn-primary" href="{% url 'catalog:product_detail' object.pk %}" role="button">Посмотреть</a>
-                    <a class="btn btn-warning" href="{% url 'catalog:product_edit' object.pk %}" role="button">Изменить</a>
+                    {% if user == object.owner %}
                     <a class="btn btn-danger" href="{% url 'catalog:product_delete' object.pk %}" role="button">Удалить</a>
+                    {% endif %}
+                    {% if perms.catalog.can_edit_is_published and perms.catalog.can_edit_description and perms.catalog.can_edit_category or user == object.owner %}
+                    <a class="btn btn-primary" href="{% url 'catalog:product_edit' object.pk %}" role="button">Изменить</a>
+                    {% endif %}
+                    <a class="btn btn-primary" href="{% url 'catalog:product_detail' object.pk %}" role="button">Посмотреть</a>
                 </div>
                 <div class="card-footer">
                     {% for version in object.versions.all %}
